nginx-tls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    #cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - dev.blualism.com
    secretName: quickstart-example-tls
  rules:
  - host: dev.blualism.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
